discussion/kv_engine/163194/163194_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Account for packet data when received, but ACK on success

MB-47318 and the test code in this patch demonstrated that a buffered
delete can lead to an incorrect DCP buffer-acknowledgement, larger
than sent from the producer (MB-47318) or smaller (as found by extended
testing).

The issue occurs because as we process a DCP delete it may need the
value sanitising to handle past bugs - this means decompressing the
Item for inspection. If we then fail to store the delete and have to
buffer the Item, the AUXIO task when successful in storing the delete
will calculate the ACK based on the sanitised/decompressed Item -
this is now larger or smaller than the packet data.

The fix in this commit is to always account for the ACK size on the
'front-end' function - i.e. DcpConsumer:deletion using the
UpdateFlowControl object. This code is looking at the 'raw' network
data and can calculate the correct size. However UpdateFlowControl is
changed so that it will only ever trigger a buffer acknowledgement
when data is successfully stored. If data is buffered, the
notification to acknowledge is skipped. Now when the AUXIO buffering
task successfully stores the buffered items it can now trigger an
acknowledgement.

Change-Id: I1dea8e2dd355239bf9286a895c9ac5636fc1db0c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-07 13:10:41.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-07 13:59:54.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40894/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
unknown file: error: C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (4 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13270/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_dcp_consumer.cc:158:29: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
            doc.value = cb::xattr::make_wire_encoded_string(value, xattrList);
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13270/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_dcp_consumer.cc:158:29:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15735/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14870/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2021-10-07T13:39:05.432Z] unknown file: Failure
[2021-10-07T13:39:05.432Z] C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[2021-10-07T13:39:05.432Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2927/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2021-10-07T13:36:41.157Z] unknown file: Failure
[2021-10-07T13:36:41.157Z] C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[2021-10-07T13:36:41.157Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (1 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23161/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2021-10-07T13:49:14.890Z] unknown file: Failure
[2021-10-07T13:49:14.890Z] C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[2021-10-07T13:49:14.890Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (10 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23161/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14018/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2021-10-07T13:26:45.636Z] unknown file: Failure
[2021-10-07T13:26:45.636Z] C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[2021-10-07T13:26:45.636Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (3 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15141/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2021-10-07T13:40:18.057Z] unknown file: Failure
[2021-10-07T13:40:18.057Z] C++ exception with description "Failed dcpOpenConsumer: Not supported (131)" thrown in SetUp().
[2021-10-07T13:40:18.057Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (3 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15141/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34779/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12058/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2888/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
